spade-tests/src/snapshots/spade_tests__typeinference__integer_patterns_are_bounds_checked.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(x: uint<8>) -> bool {
    match x {
        512 => false,
        _ => false,
    }
}


error: Integer value does not fit in int<8>
  ┌─ testinput:3:9
  │
3 │         512 => false,
  │         ^^^ 512 does not fit in an uint<8>
  │
  = note: uint<8> fits unsigned integers in the range (0, 255)
